# RedPanda-Launcher

./: README.md  build_nsis_assets.py  index.html  package-lock.json  package.json  remove_bg.py  tailwind.config.js  vite.config.ts
src/: App.tsx  i18n.ts  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/setup/: license.txt
src-tauri/src/: accounts.rs  import.rs  instances.rs  launcher.rs  lib.rs  main.rs  modrinth.rs  oauth.rs  settings.rs  test.rs  versions.rs
src/components/: AccountSelector.tsx  CrashModal.tsx  CreateInstanceModal.tsx  InstanceManagerModal.tsx  ModrinthBrowser.tsx  SettingsModal.tsx  Toast.tsx
src/locales/: en.json  es.json  ru.json  zh.json
src/pages/: Home.tsx
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
