[package]
name = "redpanda-launcher"
version = "0.1.2"
description = "RedPanda Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redpanda_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
lighty-launcher = { version = "26.5.12", features = ["vanilla", "forge", "fabric", "neoforge", "quilt", "events"] }
lighty-event = "26.5.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.3"
dirs = "6.0.0"
tauri-plugin-log = "2.0.0"
log = "0.4.33"
zip = "8.6.0"
futures = "0.3.33"
secrecy = "0.10.3"
sha1 = "0.11.0"
hex = "0.4.3"
tauri-plugin-dialog = "2"
walkdir = "2.5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
